--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/game.css"/>
-    <script src="js/game.js" ></script>
+    <script src="js/classes.js" ></script>
+    <script src="js/variables.js" ></script>
+    <script src="js/input.js" ></script>
+    <script src="js/utils.js" ></script>
+    <script src="js/variables.js" ></script>
+    <script src="js/draw.js" ></script>
+    <script src="js/gameLoop.js" ></script>
   </head>
 
   <body>
     <canvas id="game-screen"/>
   </body>
+
+  <script src="js/game.js" ></script>
 </html>
