--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-    <canvas id="game-screen"/>
+    <canvas id="game-screen">
+    </canvas>
   </body>
 
   <script src="js/game.js" ></script>
