--- a/cells/index.html
+++ b/cells/index.html
@@ -8,6 +8,7 @@
     <script src="js/variables.js" ></script>
     <script src="js/draw.js" ></script>
     <script src="js/gameLoop.js" ></script>
+    <script src="js/network.js" ></script>
   </head>
 
   <body>
